--- a/index.Rmd
+++ b/index.Rmd
@@ -42,7 +42,7 @@ ASP <- st_read("https://raw.githubusercontent.com/gf0604-procesamientodatosgeogr
                quiet = TRUE)
 ```
 
-# **a. Eliminar los registros con valor mayor a 1000 en los datos de presencia**
+# **1. Eliminar los registros con valor mayor a 1000 en los datos de presencia**
 
 ## Cantidad original: **29863**
 
@@ -60,7 +60,7 @@ cat("Cantidad de registros después de descartar los de alta incertidumbre", nro
 ## Cantidad de registros después de descartar los valores mayor a 1000 : **28406**
 
 
-# **b. Elimiar los NA del campo *specie* en los registros de presencia**
+# **2. Elimiar los NA del campo *specie* en los registros de presencia**
 
 
 ```{r}
@@ -75,27 +75,33 @@ cat("Cantidad de espacios luego de elimiar los NA:", nrow(familia_Orchidaceae))
 ```
 
 
-# **c. Eliminar los valores del *Área Marina de Manejo* y *area marina protegida* del conjunto de datos ASP**
+# **3. Eliminar los valores del *Área Marina de Manejo* y *area marina protegida* del conjunto de datos ASP**
 
 
 ```{r}
-
 ASP <-
   ASP %>%
   filter(!is.na(descripcio) & descripcio != "Area marina protegida")
-
-
 ```
 
 
 ```{r}
-
 ASP <-
   ASP %>%
   filter(!is.na(descripcio) & descripcio != "Area Marina de Manejo")
+```
+
+
+# Mapa Leaflet 
+
+```{r}
+# **Creación de conjunto de datos con la cantidad de registros por área protegida**
 
 
 ```
+
+
+
 
 
 
